WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
36658
Web Inspector: contents of worker script not shown on the resource tab
https://bugs.webkit.org/show_bug.cgi?id=36658
Summary
Web Inspector: contents of worker script not shown on the resource tab
Andrey Kosyakov
Reported
2010-03-26 05:31:56 PDT
1. Load a page with workers 2. Workers debugging should be set to off (i.e. not using fake workers) Note worker scripts are shown in resource panel, but content tab is empty.
Attachments
Send worker resource content to inspector controller to enable display of worker scripts content in inspector's resource tab
(8.79 KB, patch)
2010-03-26 05:40 PDT
,
Andrey Kosyakov
no flags
Details
Formatted Diff
Diff
Send worker resource content to inspector controller to enable display of worker scripts content in inspector's resource tab
(8.30 KB, patch)
2010-03-26 06:36 PDT
,
Andrey Kosyakov
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Andrey Kosyakov
Comment 1
2010-03-26 05:40:50 PDT
Created
attachment 51733
[details]
Send worker resource content to inspector controller to enable display of worker scripts content in inspector's resource tab
WebKit Review Bot
Comment 2
2010-03-26 05:43:20 PDT
Attachment 51733
[details]
did not build on chromium: Build output:
http://webkit-commit-queue.appspot.com/results/1387017
Andrey Kosyakov
Comment 3
2010-03-26 06:36:49 PDT
Created
attachment 51736
[details]
Send worker resource content to inspector controller to enable display of worker scripts content in inspector's resource tab
Pavel Feldman
Comment 4
2010-03-26 06:52:38 PDT
Comment on
attachment 51736
[details]
Send worker resource content to inspector controller to enable display of worker scripts content in inspector's resource tab I noticed that there is a number of methods on ScriptExecutionContext that are there with no good reason. All they do is delegate to InspectorController instance that is now exposed on the context itself. Since you exposed it in the context, could you remove these methods now?
WebKit Commit Bot
Comment 5
2010-03-26 09:34:21 PDT
Comment on
attachment 51736
[details]
Send worker resource content to inspector controller to enable display of worker scripts content in inspector's resource tab Clearing flags on attachment: 51736 Committed
r56630
: <
http://trac.webkit.org/changeset/56630
>
WebKit Commit Bot
Comment 6
2010-03-26 09:34:26 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug