2010-03-26  Andrey Kosyakov  <caseq@chromium.org>

Reviewed by Pavel Feldman.

        Send worker resource content to inspector to enable display of web
        workers in inspector's resource tab.
        https://bugs.webkit.org/show_bug.cgi?id=36658

        * inspector/InspectorController.cpp:
        (WebCore::InspectorController::resourceRetrievedByXMLHttpRequest):
        (WebCore::InspectorController::scriptImported):
        * inspector/InspectorResource.cpp:
        (WebCore::InspectorResource::type):
        (WebCore::InspectorResource::setOverrideContent):
        (WebCore::InspectorResource::sourceString):
        * inspector/InspectorResource.h:
        * workers/DefaultSharedWorkerRepository.cpp:
        (WebCore::SharedWorkerScriptLoader::notifyFinished):
        * workers/Worker.cpp:
        (WebCore::Worker::notifyFinished):
2010-03-26  Andrey Kosyakov  <caseq@chromium.org>

        Reviewed by Pavel Feldman.

        Send worker resource content to inspector to enable display of web
        workers in inspector's resource tab.
        https://bugs.webkit.org/show_bug.cgi?id=36658

        * src/SharedWorkerRepository.cpp:
        (WebCore::SharedWorkerScriptLoader::notifyFinished):

Canonical link: https://commits.webkit.org/47924@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56630 268f45cc-cd09-0410-ab3c-d52691b4dbfc